--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
   <!-- Tagline -->
   <p style="font-size:18px;color:#ccc;margin-bottom:20px;">
-    📌 I am  <strong> Computer Scientist with specialization on Data & Business Analyst</strong>, actively seeking
+    📌 I'm a <strong> Computer Scientist with specialization on Data & Business Analyst</strong>, actively seeking
      <strong>remote or hybrid opportunities in Data analytics and Business analysis</strong>. Open to 
      connecting with professionals and organizations where I can contribute my skills and grow.Let’s connect!
   </p>
