Portofolio new update

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@
       </div>
       
       <div class="cert-card">
-        <img src="images/cisco DA.PNG" alt="Certification">
+        <img src="images/who3.jpg" alt="Certification">
         <p>Cisco Network Academy <br>Data Analytics Essentials</p>
         <a href="https://www.netacad.com/certificates?issuanceId=44042b32-99a3-4bc8-b1c7-2db0826f2092" target="_blank">Verify</a>
       </div>
       <div class="cert-card">
-        <img src="images/intro to data science.PNG" alt="Certification">
+        <img src="images/ciscoDA.jpg" alt="Certification">
          <p>Cisco Network Academy <br>Introduction to Data Science</p>
         <a href="https://www.netacad.com/certificates?issuanceId=c994b0e9-a738-4325-ba46-2fd6ac6a35b7" target="_blank">Verify</a>
       </div>
