Publication Tab Added

--- a/index.html
+++ b/index.html
@@ -176,11 +176,18 @@
   <section id="education">
     <h2>Education & Membership</h2>
     <div class="edu-container">
-      <div class="edu-card">BSc (Computer Science)</div>
-      <div class="edu-card">MSc (Computer Science)</div>
+      <div class="edu-card">BSc <br>(Computer Science)</div>
+      <div class="edu-card">MSc <br> (Computer Science)</div>
+       <div class="edu-card">PhD in View <br> (Computer Science)</div>
        <div class="edu-card">Member, <br>Nigeria Computer Society <i>(MNCS)</i></div>
-       <div class="edu-card">Member,<br> Computer Professional of Nigeria <i>(MCPN)</i></div>
+       <div class="edu-card">Member,<br> Computer Professional of Nigeria <i>(MCPN) in View</i></div>
+       
     </div>
+  </section>
+
+  <section id="education">
+    <h2>Publications</h2>
+    <a href="https://ijaem.net/issue_certificate/510875.pdf" target="_blank">Efficient Algorithms for Group Communication in a Distributed Computing Environment</a>
   </section>
 <br><br><br><br>
   <footer id="contact">
