--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
     <div class="edu-container">
       <div class="edu-card">BSc <br>(Computer Science)</div>
       <div class="edu-card">MSc <br> (Computer Science)</div>
-       <div class="edu-card">PhD in View <br> (Computer Science)</div>
+       <!-- <div class="edu-card">PhD in View <br> (Computer Science)</div> -->
        <div class="edu-card">Member, <br>Nigeria Computer Society <i>(MNCS)</i></div>
-       <div class="edu-card">Member,<br> Computer Professional of Nigeria <i>(MCPN) in View</i></div>
+       <!-- <div class="edu-card">Member,<br> Computer Professional of Nigeria <i>(MCPN) in View</i></div> -->
        
     </div>
   </section>
