--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@
 
   <section id="education">
     <h2>Publications</h2>
-    <a href="https://ijaem.net/issue_certificate/510875.pdf" target="_blank">Efficient Algorithms for Group Communication in a Distributed Computing Environment</a>
+  <div class="publications" >
+      <a href="https://ijaem.net/issue_certificate/510875.pdf" target="_blank">
+     Efficient Algorithms for Group Communication in a Distributed Computing Environment
+    </a>
+  </div>
   </section>
 <br><br><br><br>
   <footer id="contact">
