--- a/index.html
+++ b/index.html
@@ -189,8 +189,11 @@
     <h2>Publications</h2>
   <div class="publications" >
       <a href="https://ijaem.net/issue_certificate/510875.pdf" target="_blank">
+     Efficient Algorithms for Group Communication in a Distributed Computing Environment</a>
+    </br>
+     <!-- <a href="https://ijaem.net/issue_certificate/510875.pdf" target="_blank">
      Efficient Algorithms for Group Communication in a Distributed Computing Environment
-    </a>
+    </a> -->
   </div>
   </section>
 <br><br><br><br>
