--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
   <section id="education">
     <h2>Publications</h2>
   <div class="publications" >
-      <a href="https://ijaem.net/issue_certificate/510875.pdf" target="_blank">
+      <a href="Efficient Algorithms for Group Communication in a Distributed Computing Environment.pdf" target="_blank">
      Efficient Algorithms for Group Communication in a Distributed Computing Environment</a>
     </br>
      <!-- <a href="https://ijaem.net/issue_certificate/510875.pdf" target="_blank">
